// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"   123   " 1`] = `
plain (1:4 ~ 1:7)
1 | ···123···¶
  |    ^^^
<plain value="123" />
`;

exports[`" ! 12  " 1`] = `
nonSpecificTag (1:2 ~ 1:3)
1 | ·!·12··¶
  |  ^
<nonSpecificTag />
`;

exports[`" !!str # comment 1 \\n &anchor # comment 2 \\n  123   " 1`] = `
plain (3:3 ~ 3:6)
1 | ·!!str·#·comment·1·¶
2 | ·&anchor·#·comment·2·¶
3 | ··123···¶
  |   ^^^
<plain value="123">
  <shorthandTag handle="!!" suffix="str" />
  <anchor value="anchor" />
  <middleComment value=" comment 1 ">
  <middleComment value=" comment 2 ">
</plain>
`;

exports[`" !!str # comment 1 \\n &anchor # comment 2 \\n  123   " 2`] = `
comment (1:8 ~ 1:20)
1 | ·!!str·#·comment·1·¶
  |        ^^^^^^^^^^^^
2 | ·&anchor·#·comment·2·¶
3 | ··123···¶
<comment value=" comment 1 " />
`;

exports[`" !!str # comment 1 \\n &anchor # comment 2 \\n  123   " 3`] = `
comment (2:10 ~ 2:22)
1 | ·!!str·#·comment·1·¶
2 | ·&anchor·#·comment·2·¶
  |          ^^^^^^^^^^^^
3 | ··123···¶
<comment value=" comment 2 " />
`;

exports[`"# comment\\n&anchor !<tag> 123" 1`] = `
plain (2:16 ~ 2:19)
1 | #·comment¶
2 | &anchor·!<tag>·123¶
  |                ^^^
<plain value="123">
  <verbatimTag value="tag" />
  <anchor value="anchor" />
  <leadingComment value=" comment">
</plain>
`;

exports[`"# comment\\n&anchor !<tag> 123" 2`] = `
verbatimTag (2:9 ~ 2:15)
1 | #·comment¶
2 | &anchor·!<tag>·123¶
  |         ^^^^^^
<verbatimTag value="tag" />
`;

exports[`"# comment\\n&anchor !<tag> 123" 3`] = `
anchor (2:1 ~ 2:8)
1 | #·comment¶
2 | &anchor·!<tag>·123¶
  | ^^^^^^^
<anchor value="anchor" />
`;

exports[`"# comment\\n&anchor !<tag> 123" 4`] = `
comment (1:1 ~ 1:10)
1 | #·comment¶
  | ^^^^^^^^^
2 | &anchor·!<tag>·123¶
<comment value=" comment" />
`;

exports[`"a: b\\n c" 1`] = `
plain (1:4 ~ 2:3)
1 | a:·b¶
  |    ^^
2 | ·c¶
  | ^^
<plain value="b c" />
`;
